[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/ui/TitleScreen.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/Kitty Likes Title.png" type="Texture" id=3]
[ext_resource path="res://scenes/ui/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/ui/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/ui/FadeInSceneTransition.tscn" type="PackedScene" id=6]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Theme" ]

[node name="Menu" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Logo" type="TextureRect" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1159.0
margin_bottom = 239.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Margin", "Material", "Theme" ]

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 243.0
margin_right = 1159.0
margin_bottom = 405.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
alignment = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 577.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
_sections_unfolded = [ "Size Flags", "custom_constants" ]

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" index="0" instance=ExtResource( 4 )]

margin_top = 11.0
margin_right = 577.0
margin_bottom = 71.0

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" index="1" instance=ExtResource( 5 )]

margin_top = 91.0
margin_right = 577.0
margin_bottom = 151.0

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 581.0
margin_right = 1159.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Material", "Size Flags", "Visibility" ]

[node name="Characters" type="TextureRect" parent="Menu/CenterRow/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 289.0
margin_top = 81.0
margin_right = 289.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="VersionLabel" type="Label" parent="Menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 409.0
margin_right = 1159.0
margin_bottom = 572.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
text = "Version 0.0.1
Casino Cats"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FadeIn" parent="." index="1" instance=ExtResource( 6 )]


